// Original file: proto/random.proto

import type { GroupInfo as _randomPackage_GroupInfo, GroupInfo__Output as _randomPackage_GroupInfo__Output } from '../randomPackage/GroupInfo';

export interface GroupMessage {
  'groupInfo'?: (_randomPackage_GroupInfo | null);
  'message'?: (string);
}

export interface GroupMessage__Output {
  'groupInfo'?: (_randomPackage_GroupInfo__Output);
  'message'?: (string);
}
